Improved keyboard appearance
 - Modified CSS
 - Added glyphicons in some keyboard keys

--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -33,7 +33,7 @@
         <main>
             <div class='keyboard'>
                 <div class='keyboard-row'>
-                    <span class='key' id='tab'>Tab</span>
+                    <span class='key' id='tab'>tab</span>
                     <span class='key'>Q</span>
                     <span class='key'>W</span>
                     <span class='key'>E</span>
@@ -49,7 +49,7 @@
                     <span class='key'>\</span>
                 </div>
                 <div class='keyboard-row'>
-                    <span class='key' id='caps'>Caps</span>
+                    <span class='key' id='caps'>caps</span>
                     <span class='key'>A</span>
                     <span class='key'>S</span>
                     <span class='key'>D</span>
@@ -61,10 +61,10 @@
                     <span class='key'>L</span>
                     <span class='key'>;</span>
                     <span class='key'>'</span>
-                    <span class='key' id='enter'>Enter</span>
+                    <span class='key' id='enter'><i class="fa fa-level-down fa-rotate-90"></i></span>
                 </div>
                 <div class='keyboard-row'>
-                    <span class='key' id='shift'>Shift</span>
+                    <span class='key' id='shift'>shift</span>
                     <span class='key'>Z</span>
                     <span class='key'>X</span>
                     <span class='key'>C</span>
@@ -74,15 +74,13 @@
                     <span class='key'>,</span>
                     <span class='key'>.</span>
                     <span class='key'>/</span>
-                    <span class='key' id='shift'>Shift</span>
+                    <span class='key' id='shift'>shift</span>
                 </div>
                 <div class='keyboard-row'>
-                    <span class='key' id='ctrl'>Ctrl</span>
-                    <span class='key' id='com'>.com</span>
-                    <span class='key' id='cmd'>cmd</span>
-                    <span class='key' id='alt'>Alt</span>
+                    <span class='key' id='toggle'>?123</span>
+                    <span class='key' id='cmd'><i class="fa fa-windows"></i></span>
                     <span class='key' id='spacebar'>&nbsp;</span>
-                    <span class='key' id='ctrl'>Ctrl</span>
+                    <span class='key' id='backspace'><i class="fa fa-arrow-left"></i></span>
                 </div>
             </div>
         </main>
