--- a/yarc/static/styles/remote.css
+++ b/yarc/static/styles/remote.css
@@ -10,6 +10,7 @@ body {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 100%;
 }
 header {
     width: 100%;
@@ -29,7 +30,8 @@ main .player {
     width: 176px;
     height: 176px;
     background: -webkit-gradient(linear, left bottom, left top, from(#222), to(#111));
-    background: linear-gradient(0deg, #222, #111);
+    /* background: linear-gradient(0deg, #222, #111); */
+    background: linear-gradient(0deg, #eee, #ddd);
     border-radius: 100%;
     border: solid 2px #000;
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.2), 0 4px 2px rgba(0, 0, 0, 0.2);
@@ -61,7 +63,8 @@ main .player .fa.fa-play {
     line-height: 88px;
     text-align: center;
     background: -webkit-gradient(linear, left bottom, left top, from(#111), to(#222));
-    background: linear-gradient(0deg, #111, #222);
+    /* background: linear-gradient(0deg, #111, #222); */
+    background: linear-gradient(0deg, #ddd, #eee);
 }
 main .player .fa.fa-volume-up {
     top: 8%;
@@ -98,90 +101,130 @@ footer {
 main .keyboard {
     position: relative;
     background: -webkit-gradient(linear, left bottom, left top, from(#ddd), to(#eee));
-    background: linear-gradient(0deg, #ddd, #eee);
-    padding: 10px;
+    background: linear-gradient(0deg, #eee, #ddd);
+    padding: 25px;
+    max-width: 970px;
+    margin: auto;
+    border-radius: 5px;
 }
+
 .keyboard-row {
-    text-align: center
+    text-align: center;
+    display: flex;
 }
 .key {
     display: inline-block;
-    border-top: 1px solid #b5b5b5;
-    border-left: 1px solid #b5b5b5;
-    border-right: 1px solid #b5b5b5;
-    border-bottom: 5px solid #b5b5b5;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
     margin-bottom: 5px;
     background: #eee;
     cursor: pointer;
     height: 20px;
-    width: 20px;
+    width: 5%;
     transition: border-bottom 0.5s linear;
-    font-size: 2vw;
+    box-shadow: 0px 2px 0px 1px #AAA;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    flex: auto;
+    background: linear-gradient(0deg, #ddd, #eee);
 }
 .key:active {
-    border-bottom: 1px solid #b5b5b5;
+    box-shadow: 0px 0px 1px 0px rgb(138, 138, 138);
+    transform: translateY(2px);
 }
 .key#tab {
-    width: 40px;
+    width: 8%;
 }
 .key#caps {
-    width: 45px;
+    width: 10%;
 }
 .key#shift {
-    width: 95px;
+    width: 15%;
 }
-.key#ctrl {
-    width: 50px;
+.key#toggle{
+    width: 4%;
 }
-.key#com, .key#cmd{
-    width: 40px;
+.key#cmd{
+    width: 4%;
 }
 .key#spacebar {
-    width: 280px;
+    width: 50%;
 }
 .key#enter {
-    width: 60px;
+    width: 15%;
 }
-.key#alt {
-    width: 40px;
-}
-
-
-
-
 .switch-remote {
     height: 100%;
-    font-size: 40px;
+    font-size: 30px;
     position: relative;
     display: flex;
 }
+
+
+@media screen and (orientation:portrait)
+{
+    /*
+    In portrait mode, the keyboard keys are made similar to how they are in mobile keyboard.
+    This saves up lot of space to make keys more visible.
+    */
+    .key {
+        border: 1px solid #b5b5b5;
+        border-radius: 0px;
+        padding: 2px;
+        background: #eee;
+        cursor: pointer;
+        height: 5%;
+        width: 5%;
+        min-width: 15px;
+        transition: border-bottom 0.5s linear;
+        font-size: 14px;
+        min-height: 16px;
+    }
+    .keyboard-row {
+        font-size: 0;
+    }
+    .switch-remote {
+        font-size: 20px;
+    }
+    main .keyboard {
+        padding: 15px;
+    }
+    .key#tab, .key#caps, .key#shift, .key#toggle {
+        font-size: 12px;
+    }
+}
+
+
 .left-remote {
     cursor: pointer;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
     position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
+    left: -8;
+    top: -8;
+    bottom: -8;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 .right-remote {
     cursor: pointer;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
     position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    right: -8;
+    top: -8;
+    bottom: -8;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 .left-remote:active {
     color: cyan;
