--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -2,10 +2,10 @@
     <title>yarc | Yet Another Remote Control</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="theme-color" content="#222">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='{{ url_for("static",filename="styles/remote.css") }}'>
-    <link rel='stylesheet' href='../static/styles/remote.css'>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous">
@@ -13,17 +13,22 @@
 </head>
 
 <body>
-
+<div class="settings-bar">
+    <i class="fa fa-cog"></i>
+</div>
 <div class='container'>
     <div class='remote-container'>
-        <header></header>
+        <header>
+            <div id="brightness-low"></div>
+            <div id="brightness-high"></div>
+        </header>
         <main>
             <div class='player'>
-                <i class='fa fa-volume-up'></i>
-                <i class='fa fa-fast-backward'></i>
-                <i class='fa fa-play'></i>
-                <i class='fa fa-fast-forward'></i>
-                <i class='fa fa-volume-down'></i>
+                <i class='fa fa-volume-up' buttonid='volumeup'></i>
+                <i class='fa fa-fast-backward' buttonid='left'></i>
+                <i class='fa fa-play' buttonid='playpause'></i>
+                <i class='fa fa-fast-forward' buttonid='right'></i>
+                <i class='fa fa-volume-down' buttonid='volumedown'></i>
             </div>
         </main>
         <footer></footer>
@@ -33,61 +38,62 @@
         <main>
             <div class='keyboard'>
                 <div class='keyboard-row'>
-                    <span class='key' id='tab'>tab</span>
-                    <span class='key'>Q</span>
-                    <span class='key'>W</span>
-                    <span class='key'>E</span>
-                    <span class='key'>R</span>
-                    <span class='key'>T</span>
-                    <span class='key'>Y</span>
-                    <span class='key'>U</span>
-                    <span class='key'>I</span>
-                    <span class='key'>O</span>
-                    <span class='key'>P</span>
-                    <span class='key'>[</span>
-                    <span class='key'>]</span>
-                    <span class='key'>\</span>
+                    <span class='key' id='tab' buttonid='tab'>tab</span>
+                    <span class='key' buttonid='q'>Q</span>
+                    <span class='key' buttonid='w'>W</span>
+                    <span class='key' buttonid='e'>E</span>
+                    <span class='key' buttonid='r'>R</span>
+                    <span class='key' buttonid='t'>T</span>
+                    <span class='key' buttonid='y'>Y</span>
+                    <span class='key' buttonid='u'>U</span>
+                    <span class='key' buttonid='i'>I</span>
+                    <span class='key' buttonid='o'>O</span>
+                    <span class='key' buttonid='p'>P</span>
+                    <span class='key' buttonid='['>[</span>
+                    <span class='key' buttonid=']'>]</span>
+                    <span class='key' buttonid='\\'>\</span>
                 </div>
                 <div class='keyboard-row'>
-                    <span class='key' id='caps'>caps</span>
-                    <span class='key'>A</span>
-                    <span class='key'>S</span>
-                    <span class='key'>D</span>
-                    <span class='key'>F</span>
-                    <span class='key'>G</span>
-                    <span class='key'>H</span>
-                    <span class='key'>J</span>
-                    <span class='key'>K</span>
-                    <span class='key'>L</span>
-                    <span class='key'>;</span>
-                    <span class='key'>'</span>
-                    <span class='key' id='enter'><i class="fa fa-level-down fa-rotate-90"></i></span>
+                    <span class='key' id='caps' buttonid='capslock'>caps</span>
+                    <span class='key' buttonid='a'>A</span>
+                    <span class='key' buttonid='s'>S</span>
+                    <span class='key' buttonid='d'>D</span>
+                    <span class='key' buttonid='f'>F</span>
+                    <span class='key' buttonid='g'>G</span>
+                    <span class='key' buttonid='h'>H</span>
+                    <span class='key' buttonid='j'>J</span>
+                    <span class='key' buttonid='k'>K</span>
+                    <span class='key' buttonid='l'>L</span>
+                    <span class='key' buttonid=';'>;</span>
+                    <span class='key' buttonid="'">'</span>
+                    <span class='key' id='enter' buttonid='enter'><i class="fa fa-level-down fa-rotate-90"></i></span>
                 </div>
                 <div class='keyboard-row'>
-                    <span class='key' id='shift'>shift</span>
-                    <span class='key'>Z</span>
-                    <span class='key'>X</span>
-                    <span class='key'>C</span>
-                    <span class='key'>V</span>
-                    <span class='key'>B</span>
-                    <span class='key'>N</span>
-                    <span class='key'>,</span>
-                    <span class='key'>.</span>
-                    <span class='key'>/</span>
-                    <span class='key' id='shift'>shift</span>
+                    <span class='key' id='shift' buttonid='shiftleft'>shift</span>
+                    <span class='key' buttonid='z'>Z</span>
+                    <span class='key' buttonid='x'>X</span>
+                    <span class='key' buttonid='c'>C</span>
+                    <span class='key' buttonid='v'>V</span>
+                    <span class='key' buttonid='b'>B</span>
+                    <span class='key' buttonid='n'>N</span>
+                    <span class='key' buttonid='m'>M</span>
+                    <span class='key' buttonid=','>,</span>
+                    <span class='key' buttonid='.'>.</span>
+                    <span class='key' buttonid='/'>/</span>
+                    <span class='key' id='shift' buttonid='shiftright'>shift</span>
                 </div>
                 <div class='keyboard-row'>
                     <span class='key' id='toggle'>?123</span>
-                    <span class='key' id='cmd'><i class="fa fa-windows"></i></span>
-                    <span class='key' id='spacebar'>&nbsp;</span>
-                    <span class='key' id='backspace'><i class="fa fa-arrow-left"></i></span>
+                    <span class='key' id='cmd' buttonid='winleft'><i class="fa fa-windows"></i></span>
+                    <span class='key' id='spacebar' buttonid='space'>&nbsp;</span>
+                    <span class='key' id='backspace' buttonid='backspace'><i class="fa fa-arrow-left"></i></span>
                 </div>
             </div>
         </main>
         <footer></footer>
     </div>
-
 </div>
+
 <div class='switch-remote'>
     <div class='left-remote' onclick='switchRemote(-1)'>
         <i class='fa fa-angle-double-left'></i>
@@ -97,33 +103,6 @@
     </div>
 </div>
 
-
-<script>
-    var remoteIdx = 1;
-    showRemote(remoteIdx);
-    function switchRemote(n) {
-        showRemote(remoteIdx += n);
-    }
-
-    function showRemote(n) {
-        var i;
-        var x = document.getElementsByClassName('remote-container');
-        if(n > x.length)
-            remoteIdx = 1;
-        if(n < 1)
-            remoteIdx = x.length
-        for(i = 0; i < x.length; i++){
-            x[i].style.display = 'none';
-        }
-        x[remoteIdx-1].style.display = 'block';
-    }
-
-    // Play sound on key press of keyboard
-    var audio = new Audio('../static/resources/keypress_sound.mp3');
-    $('.key').on('click', function() {
-        audio.play();
-    });
-</script>
-
+<script src='{{ url_for("static",filename="scripts/remote.js") }}'></script>
 
 </body>
