--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -31,7 +31,10 @@
                 <i class='fa fa-volume-down' buttonid='volumedown'></i>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div id="mute"></div>
+            <div id="fullscreen"></div>
+        </footer>
     </div>
     <div class='remote-container'>
         <header></header>
