--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -95,6 +95,18 @@
         </main>
         <footer></footer>
     </div>
+    <div class='remote-container'>
+        <header></header>
+        <main>
+            <div class='mouse'>
+                <div class='touchpad'>
+                <div class='mouse-btn left-mouse-btn'></div>
+                <div class='mouse-btn right-mouse-btn'></div>
+                </div>
+            </div>
+        </main>
+        <footer></footer>
+    </div>
 </div>
 
 <div class='switch-remote'>
