Few minor improvements
 - The sound element should be created everytime keyboard button is
   pressed. This resolves the problem that sound was not playing
   if the last sound is not finished completely.

 - Sound effect added to left and mouse buttons

 - Scroll ability (only UI side) changes added

--- a/yarc/static/styles/remote.css
+++ b/yarc/static/styles/remote.css
@@ -154,6 +154,15 @@ main .keyboard {
     right: 5px;
     border-bottom-right-radius: 15px;
 }
+.scroll {
+    display: inline-block;
+    height: 145px;
+    width: 20px;
+    background: linear-gradient(#666, #666) no-repeat center/1px 100%;
+    right: 0px;
+    position: absolute;
+    top: 10px;
+}
 
 .settings-bar {
     display: none;
