--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -6,10 +6,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='{{ url_for("static",filename="styles/remote.css") }}'>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -102,6 +99,7 @@
                 <div class='touchpad'>
                     <div class='mouse-btn left-mouse-btn'></div>
                     <div class='mouse-btn right-mouse-btn'></div>
+                    <div class='scroll'></div>
                 </div>
             </div>
         </main>
