--- a/yarc/static/styles/remote.css
+++ b/yarc/static/styles/remote.css
@@ -109,7 +109,7 @@ main .keyboard {
     border-radius: 5px;
 }
 
-.mouse .touchpad {
+.mouse .surface {
     background: -webkit-gradient(linear, left bottom, left top, from(#ddd), to(#eee));
     background: linear-gradient(0deg, #ddd, #eee);
     width: 300px;
@@ -141,6 +141,7 @@ main .keyboard {
     background: linear-gradient(0deg, #ddd, #eee);
     position: absolute;
     bottom: 0;
+    z-index: 10;
 }
 .mouse-btn:active {
     box-shadow: 0px 0px 1px 0px rgb(138, 138, 138);
@@ -162,6 +163,12 @@ main .keyboard {
     right: 0px;
     position: absolute;
     top: 10px;
+    z-index: 10;
+}
+.touchpad {
+    height: 150px;
+    width: 270px;
+    display: inline-block;
 }
 
 .settings-bar {
