--- a/yarc/templates/remote.html
+++ b/yarc/templates/remote.html
@@ -96,7 +96,8 @@
         <header></header>
         <main>
             <div class='mouse'>
-                <div class='touchpad'>
+                <div class='surface'>
+                    <div class='touchpad'></div>
                     <div class='mouse-btn left-mouse-btn'></div>
                     <div class='mouse-btn right-mouse-btn'></div>
                     <div class='scroll'></div>
